chore: Removes usage of OkHTTP
This also eliminates Kotlin dependencies